--- a/Frontend/henon-dashboard/src/index.css
+++ b/Frontend/henon-dashboard/src/index.css
@@ -9,9 +9,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
+.reset-zoom {
+	position: absolute;
+	top: 50px;
+	right: 30px;
+}
